--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "nodemon --exec ts-node src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:api": "ts-node src/tests/api.test.ts"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +33,8 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "axios": "^1.6.5",
+    "form-data": "^4.0.0"
   }
 }
