--- a/server/package.json
+++ b/server/package.json
@@ -33,8 +33,8 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9",
-    "axios": "^1.6.5",
-    "form-data": "^4.0.0"
+    "axios": "^1.8.4",
+    "form-data": "^4.0.0",
+    "nodemon": "^3.1.9"
   }
 }
