--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,30 +3,14 @@ version: '3.8'
 services:
   mongodb:
     image: mongo:latest
-    container_name: smartnotes-mongodb
-    restart: always
+    container_name: studysmartbuddy-mongodb
     ports:
       - "27017:27017"
     volumes:
       - mongodb_data:/data/db
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=smartnotes
-      - MONGO_INITDB_ROOT_PASSWORD=smartnotespassword
-
-  mongo-express:
-    image: mongo-express:latest
-    container_name: smartnotes-mongo-express
-    restart: always
-    ports:
-      - "8081:8081"
-    environment:
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=smartnotes
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=smartnotespassword
-      - ME_CONFIG_MONGODB_URL=mongodb://smartnotes:smartnotespassword@mongodb:27017/
-      - ME_CONFIG_BASICAUTH_USERNAME=admin
-      - ME_CONFIG_BASICAUTH_PASSWORD=pass
-    depends_on:
-      - mongodb
+    # No authentication for development
+    command: mongod --bind_ip_all
+    restart: unless-stopped
 
 volumes:
   mongodb_data:
